Fix Login, Register and User Profile Screen to support different screen size

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,24 +12,21 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout_Username"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="98dp"
+        android:layout_marginEnd="16dp"
         android:hint="@string/username"
-        app:errorEnabled="true"
-        app:errorTextAppearance="@style/error"
         app:boxStrokeColor="@color/colorPrimary"
         app:boxStrokeWidth="2dp"
+        app:errorEnabled="true"
+        app:errorTextAppearance="@style/error"
         app:helperText="Your Email Address"
         app:helperTextEnabled="true"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.4"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.13999999">
+        app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/username_login_input"
@@ -42,15 +39,16 @@
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/textInputLayout2_Password"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="20dp"
-        android:layout_marginTop="72dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="16dp"
         android:hint="@string/password"
         app:boxStrokeColor="@color/colorPrimary"
+        app:boxStrokeWidth="2dp"
         app:errorEnabled="true"
         app:errorTextAppearance="@style/errorForPassword"
-        app:boxStrokeWidth="2dp"
         app:helperText="Password must be more than 6 letters"
         app:helperTextEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
@@ -75,54 +73,55 @@
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_login"
         style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="180dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
         android:background="@color/colorPrimary"
+        android:paddingStart="100dp"
+        android:paddingTop="15dp"
+        android:paddingEnd="100dp"
+        android:paddingBottom="15dp"
         android:text="@string/login"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         app:cornerRadius="20dp"
-        app:layout_constraintBottom_toTopOf="@+id/button_cancel"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.467"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2_Password"
-        app:rippleColor="@color/colorAccent" />
+        app:rippleColor="@color/colorSignInRipple" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_sign_up"
         style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="72dp"
-        android:layout_marginTop="16dp"
-        android:layout_marginBottom="212dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="10dp"
         android:background="@color/colorPrimary"
+        android:backgroundTint="@color/colorPrimary"
+        android:padding="15dp"
         android:text="@string/sign_up"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/button_cancel"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/button_login"
-        app:layout_constraintVertical_bias="0.0"
-        app:rippleColor="@color/colorAccent" />
+        app:rippleColor="@color/colorSignInRipple" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_cancel"
         style="@style/Widget.MaterialComponents.Button"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:backgroundTint="#47525E"
+        android:padding="15dp"
         android:text="@string/cancel"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         app:layout_constraintBaseline_toBaselineOf="@+id/button_sign_up"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toEndOf="@+id/button_sign_up"
         app:rippleColor="@color/colorCancelRipple" />
 
