--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#2b8dba"
     tools:context=".UserProfile">
 
     <ImageView
@@ -22,16 +23,15 @@
         android:id="@+id/userImage"
         android:layout_width="144dp"
         android:layout_height="111dp"
+        android:layout_marginTop="32dp"
         android:elevation="1dp"
         android:src="@drawable/pikademo"
         app:civ_border_color="@color/colorPrimary"
         app:civ_border_width="3dp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.51"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/userProfileBg"
-        app:layout_constraintVertical_bias="0.100000024" />
+        app:layout_constraintTop_toTopOf="@+id/userProfileBg" />
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -43,7 +43,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="300dp"
+            android:layout_width="330dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|center_vertical"
             android:layout_marginTop="90dp"
@@ -60,20 +60,20 @@
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputLayout_EditName"
-                    android:visibility="gone"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|center_horizontal"
                     android:layout_marginTop="60dp"
+                    android:hint="@string/enter_your_name"
                     android:text="@string/name"
                     android:textSize="25sp"
                     android:textStyle="bold"
-                    android:hint="@string/enter_your_name"
-                    app:errorEnabled="true"
-                    app:errorTextAppearance="@style/error"
+                    android:visibility="gone"
                     app:boxStrokeColor="@color/colorPrimary"
                     app:boxStrokeWidth="2dp"
+                    app:errorEnabled="true"
+                    app:errorTextAppearance="@style/error"
                     app:helperText="Your Name"
                     app:helperTextEnabled="true">
 
@@ -81,25 +81,25 @@
                         android:id="@+id/editProfile_name"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textPersonName"/>
+                        android:inputType="textPersonName" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.textfield.TextInputLayout
                     android:id="@+id/textInputLayout_EditPhoneNumber"
-                    android:visibility="gone"
                     style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical|center_horizontal"
                     android:layout_marginTop="10dp"
+                    android:hint="@string/enter_your_phone_number"
                     android:text="@string/name"
                     android:textSize="17sp"
-                    android:hint="@string/enter_your_phone_number"
-                    app:errorEnabled="true"
-                    app:errorTextAppearance="@style/error"
+                    android:visibility="gone"
                     app:boxStrokeColor="@color/colorPrimary"
                     app:boxStrokeWidth="2dp"
+                    app:errorEnabled="true"
+                    app:errorTextAppearance="@style/error"
                     app:helperText="Your Phone Name"
                     app:helperTextEnabled="true">
 
@@ -107,7 +107,7 @@
                         android:id="@+id/editProfile_phoneNumber"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="phone"/>
+                        android:inputType="phone" />
 
                 </com.google.android.material.textfield.TextInputLayout>
 
@@ -143,7 +143,7 @@
         </com.google.android.material.card.MaterialCardView>
 
         <com.google.android.material.card.MaterialCardView
-            android:layout_width="300dp"
+            android:layout_width="330dp"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal|center_vertical"
             android:layout_marginTop="10dp"
@@ -159,69 +159,68 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginTop="0dp"
+                android:gravity="center_horizontal|center_vertical"
                 android:text="@string/quote"
                 android:textAlignment="center"
-                android:gravity="center_horizontal|center_vertical"
-                android:textStyle="italic"
-                android:textSize="15sp" />
+                android:textSize="15sp"
+                android:textStyle="italic" />
 
             <EditText
                 android:id="@+id/editProfile_quote"
-                android:visibility="gone"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical|center_horizontal"
                 android:layout_marginTop="0dp"
-                android:text="@string/quote"
+                android:gravity="center_horizontal|center_vertical"
                 android:hint="@string/enter_your_favorite_quote"
                 android:inputType="text"
+                android:text="@string/quote"
                 android:textAlignment="center"
-                android:gravity="center_horizontal|center_vertical"
+                android:textSize="15sp"
                 android:textStyle="italic"
-                android:textSize="15sp" />
+                android:visibility="gone" />
 
         </com.google.android.material.card.MaterialCardView>
     </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/editProfile_EditButton"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/colorPrimary"
         android:gravity="center_vertical|center_horizontal"
+        android:padding="8dp"
         android:text="@string/edit_profile"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toEndOf="@+id/userImage"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.036"
         app:rippleColor="@color/colorSignInRipple" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/editProfile_SaveButton"
-        android:layout_width="100dp"
-        android:layout_height="50dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="8dp"
         android:backgroundTint="@color/colorPrimary"
         android:gravity="center_vertical|center_horizontal"
         android:text="@string/save_profile"
-        android:visibility="gone"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
+        android:padding="8dp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.948"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/userImage"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.036"
         app:rippleColor="@color/colorSignInRipple" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
