--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -10,11 +10,10 @@
         android:id="@+id/label_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="49dp"
         android:text="@string/username"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/text_input_username"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
@@ -22,13 +21,12 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="3dp"
         android:layout_marginEnd="40dp"
         android:ems="10"
         android:hint="@string/enter_username"
         android:inputType="textPersonName"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label_username" />
 
@@ -36,25 +34,23 @@
         android:id="@+id/label_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="150dp"
+        android:layout_marginTop="25dp"
         android:text="@string/password"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/text_input_password"
+        app:layout_constraintTop_toBottomOf="@+id/text_input_username" />
 
     <EditText
         android:id="@+id/text_input_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="5dp"
         android:layout_marginEnd="40dp"
         android:ems="10"
         android:hint="@string/enter_password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label_password" />
 
@@ -62,58 +58,67 @@
         android:id="@+id/label_confirm_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="27dp"
         android:text="@string/confirm_password"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="@+id/text_input_confirm_password"
+        app:layout_constraintTop_toBottomOf="@+id/text_input_password" />
 
     <EditText
         android:id="@+id/text_input_confirm_password"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
         android:layout_marginEnd="40dp"
         android:ems="10"
         android:hint="@string/enter_password_again"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/label_confirm_password" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="32dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="27dp"
         android:background="@color/colorPrimary"
+        android:backgroundTint="@color/colorPrimaryDark"
+        android:paddingStart="100dp"
+        android:paddingTop="12dp"
+        android:paddingEnd="100dp"
+        android:paddingBottom="12dp"
         android:text="@string/sign_up"
         android:textColor="@android:color/white"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.18"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_confirm_password" />
+        android:textSize="18sp"
+        app:cornerRadius="25dp"
+        app:layout_constraintStart_toStartOf="@+id/text_input_confirm_password"
+        app:layout_constraintTop_toBottomOf="@+id/text_input_confirm_password"
+        app:rippleColor="@color/colorSignInRipple" />
 
-    <Button
+    <com.google.android.material.button.MaterialButton
         android:id="@+id/button_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="36dp"
-        android:layout_marginEnd="76dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="22dp"
         android:background="#47525E"
+        android:backgroundTint="#47525E"
+        android:paddingStart="20dp"
+        android:paddingTop="12dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="12dp"
         android:text="@string/cancel"
         android:textColor="@android:color/white"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/button_sign_up"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_confirm_password" />
+        app:layout_constraintStart_toEndOf="@+id/button_sign_in"
+        app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
+        app:rippleColor="@color/colorCancelRipple" />
 
-<!--    <Button
+    <!--    <Button
         android:id="@+id/button_google_sign_in"
         android:layout_width="124dp"
         android:layout_height="49dp"
@@ -133,23 +138,23 @@
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_sign_in"
-        android:layout_width="200dp"
-        android:layout_height="55dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="15dp"
         android:backgroundTint="@color/colorPrimary"
         android:gravity="center_vertical|center_horizontal"
+        android:paddingStart="20dp"
+        android:paddingTop="12dp"
+        android:paddingEnd="20dp"
+        android:paddingBottom="12dp"
         android:text="@string/sign_in"
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.46"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button_cancel"
+        app:layout_constraintEnd_toStartOf="@+id/button_cancel"
+        app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
-        app:layout_constraintVertical_bias="0.0"
         app:rippleColor="@color/colorSignInRipple" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
