--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -15,7 +15,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="98dp"
+        android:layout_marginTop="29dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/username"
         app:boxStrokeColor="@color/colorPrimary"
@@ -42,7 +42,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
-        android:layout_marginTop="21dp"
+        android:layout_marginTop="15dp"
         android:layout_marginEnd="16dp"
         android:hint="@string/password"
         app:boxStrokeColor="@color/colorPrimary"
@@ -75,7 +75,7 @@
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="28dp"
+        android:layout_marginTop="34dp"
         android:background="@color/colorPrimary"
         android:paddingStart="100dp"
         android:paddingTop="15dp"
@@ -84,9 +84,9 @@
         android:text="@string/login"
         android:textAlignment="center"
         android:textColor="@android:color/white"
-        app:cornerRadius="20dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:cornerRadius="30dp"
+        app:layout_constraintEnd_toEndOf="@+id/button_sign_up"
+        app:layout_constraintStart_toEndOf="@+id/button_sign_up"
         app:layout_constraintTop_toBottomOf="@+id/textInputLayout2_Password"
         app:rippleColor="@color/colorSignInRipple" />
 
@@ -95,8 +95,8 @@
         style="@style/Widget.MaterialComponents.Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="5dp"
-        android:layout_marginTop="14dp"
+        android:layout_marginStart="9dp"
+        android:layout_marginTop="7dp"
         android:layout_marginEnd="10dp"
         android:background="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimary"
