--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -6,84 +6,154 @@
     android:layout_height="match_parent"
     tools:context=".Register">
 
-    <TextView
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/label_username"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="16dp"
+        android:hint="@string/username"
+        app:boxStrokeColor="@color/colorPrimary"
+        app:boxStrokeWidth="2dp"
+        app:errorEnabled="true"
+        app:errorTextAppearance="@style/error"
+        app:helperText="Your Email Address"
+        app:helperTextEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/text_input_username"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:drawableStart="@drawable/ic_email_black_24dp"
+            android:inputType="textEmailAddress" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/label_password"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="16dp"
+        android:hint="@string/password"
+        app:boxStrokeColor="@color/colorPrimary"
+        app:boxStrokeWidth="2dp"
+        app:errorEnabled="true"
+        app:errorTextAppearance="@style/errorForPassword"
+        app:helperText="Password must be more than 6 letters"
+        app:helperTextEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label_username"
+        app:passwordToggleDrawable="@drawable/toggle_password_visibility"
+        app:passwordToggleEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/text_input_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/label_confirm_password"
+        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="15dp"
+        android:layout_marginEnd="16dp"
+        android:hint="@string/confirm_password"
+        app:boxStrokeColor="@color/colorPrimary"
+        app:boxStrokeWidth="2dp"
+        app:errorEnabled="true"
+        app:errorTextAppearance="@style/errorForPassword"
+        app:helperText="Password must be more than 6 letters"
+        app:helperTextEnabled="true"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label_password"
+        app:passwordToggleDrawable="@drawable/toggle_password_visibility"
+        app:passwordToggleEnabled="true">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/text_input_confirm_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword" />
+
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <!--    <TextView
         android:id="@+id/label_username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="49dp"
         android:text="@string/username"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/text_input_username"
-        app:layout_constraintTop_toTopOf="parent" />
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="49dp" />
 
     <EditText
         android:id="@+id/text_input_username"
-        android:layout_width="0dp"
+        android:layout_width="331dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="3dp"
-        android:layout_marginEnd="40dp"
         android:ems="10"
         android:hint="@string/enter_username"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label_username" />
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="76dp" />-->
 
-    <TextView
+    <!--    <TextView
         android:id="@+id/label_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="25dp"
         android:text="@string/password"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/text_input_password"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_username" />
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="146dp" />
 
     <EditText
         android:id="@+id/text_input_password"
-        android:layout_width="0dp"
+        android:layout_width="331dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="5dp"
-        android:layout_marginEnd="40dp"
         android:ems="10"
         android:hint="@string/enter_password"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label_password" />
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="175dp" />-->
 
-    <TextView
+    <!--    <TextView
         android:id="@+id/label_confirm_password"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="27dp"
         android:text="@string/confirm_password"
         android:textSize="18sp"
-        app:layout_constraintStart_toStartOf="@+id/text_input_confirm_password"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_password" />
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="247dp" />
 
     <EditText
         android:id="@+id/text_input_confirm_password"
-        android:layout_width="0dp"
+        android:layout_width="331dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="2dp"
-        android:layout_marginEnd="40dp"
         android:ems="10"
         android:hint="@string/enter_password_again"
         android:inputType="textPassword"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/label_confirm_password" />
+        tools:layout_editor_absoluteX="40dp"
+        tools:layout_editor_absoluteY="273dp" />-->
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_sign_up"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="27dp"
+        android:layout_marginTop="28dp"
         android:background="@color/colorPrimary"
         android:backgroundTint="@color/colorPrimaryDark"
         android:paddingStart="100dp"
@@ -93,17 +163,16 @@
         android:text="@string/sign_up"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        app:cornerRadius="25dp"
-        app:layout_constraintStart_toStartOf="@+id/text_input_confirm_password"
-        app:layout_constraintTop_toBottomOf="@+id/text_input_confirm_password"
+        app:cornerRadius="30dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/label_confirm_password"
         app:rippleColor="@color/colorSignInRipple" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/button_cancel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="15dp"
-        android:layout_marginEnd="22dp"
         android:background="#47525E"
         android:backgroundTint="#47525E"
         android:paddingStart="20dp"
@@ -113,9 +182,9 @@
         android:text="@string/cancel"
         android:textColor="@android:color/white"
         android:textSize="18sp"
+        app:layout_constraintBaseline_toBaselineOf="@+id/button_sign_in"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/button_sign_in"
-        app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
         app:rippleColor="@color/colorCancelRipple" />
 
     <!--    <Button
@@ -140,7 +209,9 @@
         android:id="@+id/button_sign_in"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="15dp"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="12dp"
+        android:layout_marginEnd="12dp"
         android:backgroundTint="@color/colorPrimary"
         android:gravity="center_vertical|center_horizontal"
         android:paddingStart="20dp"
@@ -151,10 +222,10 @@
         android:textAlignment="center"
         android:textColor="@android:color/white"
         android:textSize="18sp"
-        app:layout_constraintBaseline_toBaselineOf="@+id/button_cancel"
         app:layout_constraintEnd_toStartOf="@+id/button_cancel"
         app:layout_constraintHorizontal_chainStyle="packed"
         app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/button_sign_up"
         app:rippleColor="@color/colorSignInRipple" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
