Chinese translation complete

--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -19,7 +19,7 @@
         app:boxStrokeWidth="2dp"
         app:errorEnabled="true"
         app:errorTextAppearance="@style/error"
-        app:helperText="Your Email Address"
+        app:helperText="@string/your_email_address"
         app:helperTextEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,7 +47,7 @@
         app:boxStrokeWidth="2dp"
         app:errorEnabled="true"
         app:errorTextAppearance="@style/errorForPassword"
-        app:helperText="Password must be more than 6 letters"
+        app:helperText="@string/password_format_error_message"
         app:helperTextEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -76,7 +76,7 @@
         app:boxStrokeWidth="2dp"
         app:errorEnabled="true"
         app:errorTextAppearance="@style/errorForPassword"
-        app:helperText="Password must be more than 6 letters"
+        app:helperText="@string/password_format_error_message"
         app:helperTextEnabled="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
