--- a/app/src/main/res/layout/activity_user_profile.xml
+++ b/app/src/main/res/layout/activity_user_profile.xml
@@ -74,7 +74,7 @@
                     app:boxStrokeWidth="2dp"
                     app:errorEnabled="true"
                     app:errorTextAppearance="@style/error"
-                    app:helperText="Your Name"
+                    app:helperText="@string/your_name"
                     app:helperTextEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
@@ -100,7 +100,7 @@
                     app:boxStrokeWidth="2dp"
                     app:errorEnabled="true"
                     app:errorTextAppearance="@style/error"
-                    app:helperText="Your Phone Name"
+                    app:helperText="@string/your_phone_number"
                     app:helperTextEnabled="true">
 
                     <com.google.android.material.textfield.TextInputEditText
